cmake_minimum_required(VERSION 3.11)

set(PROMECT_NAME wolfssl)
set(WOLFSSL_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
set(INCLUDE_PATH ${WOLFSSL_ROOT})

#project(${PROJECT_NAME} C)
project(wolfssl)

set(LIBWOLFSSL_SRCS
    ${WOLFSSL_ROOT}/src/keys.c
    ${WOLFSSL_ROOT}/src/sniffer.c
    ${WOLFSSL_ROOT}/src/tls.c
    ${WOLFSSL_ROOT}/src/wolfio.c
    ${WOLFSSL_ROOT}/src/crl.c
    ${WOLFSSL_ROOT}/src/internal.c
    ${WOLFSSL_ROOT}/src/ocsp.c
    ${WOLFSSL_ROOT}/src/ssl.c
    ${WOLFSSL_ROOT}/src/tls13.c
)
set(LIBWOLFSSL_HEADERS
    ${INCLUDE_PATH}/wolfssl/callbacks.h
    ${INCLUDE_PATH}/wolfssl/certs_test.h
    ${INCLUDE_PATH}/wolfssl/crl.h
    ${INCLUDE_PATH}/wolfssl/error-ssl.h
    ${INCLUDE_PATH}/wolfssl/internal.h
    ${INCLUDE_PATH}/wolfssl/ocsp.h
    ${INCLUDE_PATH}/wolfssl/sniffer.h
    ${INCLUDE_PATH}/wolfssl/sniffer_error.h
    ${INCLUDE_PATH}/wolfssl/ssl.h
    ${INCLUDE_PATH}/wolfssl/test.h
    ${INCLUDE_PATH}/wolfssl/version.h
)
set(LIBWOLFSSL_OPENSSL_HEADERS
    ${INCLUDE_PATH}/wolfssl/openssl/aes.h
    ${INCLUDE_PATH}/wolfssl/openssl/asn1.h
    ${INCLUDE_PATH}/wolfssl/openssl/bio.h
    ${INCLUDE_PATH}/wolfssl/openssl/bn.h
    ${INCLUDE_PATH}/wolfssl/openssl/buffer.h
    ${INCLUDE_PATH}/wolfssl/openssl/conf.h
    ${INCLUDE_PATH}/wolfssl/openssl/crypto.h
    ${INCLUDE_PATH}/wolfssl/openssl/des.h
    ${INCLUDE_PATH}/wolfssl/openssl/dh.h
    ${INCLUDE_PATH}/wolfssl/openssl/dsa.h
    ${INCLUDE_PATH}/wolfssl/openssl/ec.h
    ${INCLUDE_PATH}/wolfssl/openssl/ec25519.h
    ${INCLUDE_PATH}/wolfssl/openssl/ecdh.h
    ${INCLUDE_PATH}/wolfssl/openssl/ecdsa.h
    ${INCLUDE_PATH}/wolfssl/openssl/ed25519.h
    ${INCLUDE_PATH}/wolfssl/openssl/engine.h
    ${INCLUDE_PATH}/wolfssl/openssl/err.h
    ${INCLUDE_PATH}/wolfssl/openssl/evp.h
    ${INCLUDE_PATH}/wolfssl/openssl/hmac.h
    ${INCLUDE_PATH}/wolfssl/openssl/lhash.h
    ${INCLUDE_PATH}/wolfssl/openssl/md4.h
    ${INCLUDE_PATH}/wolfssl/openssl/md5.h
    ${INCLUDE_PATH}/wolfssl/openssl/objects.h
    ${INCLUDE_PATH}/wolfssl/openssl/ocsp.h
    ${INCLUDE_PATH}/wolfssl/openssl/opensslconf.h
    ${INCLUDE_PATH}/wolfssl/openssl/opensslv.h
    ${INCLUDE_PATH}/wolfssl/openssl/ossl_typ.h
    ${INCLUDE_PATH}/wolfssl/openssl/pem.h
    ${INCLUDE_PATH}/wolfssl/openssl/pkcs12.h
    ${INCLUDE_PATH}/wolfssl/openssl/rand.h
    ${INCLUDE_PATH}/wolfssl/openssl/rc4.h
    ${INCLUDE_PATH}/wolfssl/openssl/ripemd.h
    ${INCLUDE_PATH}/wolfssl/openssl/rsa.h
    ${INCLUDE_PATH}/wolfssl/openssl/sha.h
    ${INCLUDE_PATH}/wolfssl/openssl/ssl.h
    ${INCLUDE_PATH}/wolfssl/openssl/ssl23.h
    ${INCLUDE_PATH}/wolfssl/openssl/stack.h
    ${INCLUDE_PATH}/wolfssl/openssl/ui.h
    ${INCLUDE_PATH}/wolfssl/openssl/x509.h
    ${INCLUDE_PATH}/wolfssl/openssl/x509v3.h
)
set(LIBWOLFCRYPT_SRCS
    ${WOLFSSL_ROOT}/wolfcrypt/src/aes.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/arc4.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/asm.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/asn.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/blake2b.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/camellia.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/chacha.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/chacha20_poly1305.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/cmac.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/coding.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/compress.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/cpuid.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/cryptodev.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/curve25519.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/des3.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/dh.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/dsa.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/ecc.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/ecc_fp.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/ed25519.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/error.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/fe_low_mem.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/fe_operations.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/ge_low_mem.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/ge_operations.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/hash.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/hc128.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/hmac.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/idea.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/integer.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/logging.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/md2.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/md4.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/md5.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/memory.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/pkcs12.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/pkcs7.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/poly1305.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/pwdbased.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/rabbit.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/random.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/ripemd.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/rsa.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/sha.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/sha256.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/sha3.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/sha512.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/signature.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/sp_arm32.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/sp_arm64.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/sp_c32.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/sp_c64.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/sp_int.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/sp_x86_64.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/srp.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/tfm.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/wc_encrypt.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/wc_port.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/wolfevent.c
    ${WOLFSSL_ROOT}/wolfcrypt/src/wolfmath.c
)
set(LIBWOLFCRYPT_HEADERS
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/aes.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/arc4.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/asn.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/asn_public.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/blake2-impl.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/blake2-int.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/blake2.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/camellia.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/chacha.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/chacha20_poly1305.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/cmac.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/coding.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/compress.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/cpuid.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/cryptodev.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/curve25519.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/des3.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/dh.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/dsa.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/ecc.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/ed25519.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/error-crypt.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/fe_operations.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/fips_test.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/ge_operations.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/hash.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/hc128.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/hmac.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/idea.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/integer.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/logging.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/md2.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/md4.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/md5.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/mem_track.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/memory.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/misc.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/mpi_class.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/mpi_superclass.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/pkcs12.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/pkcs7.h
    ${INCLUDE_PATH}/wolfssl/wolfcrypt/poly1305.h
)


add_subdirectory(IDE/IAR-EWARM)
