add_library(wolfcrypt SHARED
aes.c
arc4.c
asm.c
asn.c
async.c
blake2b.c
camellia.c
chacha.c
chacha20_poly1305.c
cmac.c
coding.c
compress.c
cpuid.c
cryptodev.c
curve25519.c
des3.c
dh.c
dsa.c
ecc.c
ecc_fp.c
ed25519.c
error.c
fe_low_mem.c
fe_operations.c
fips.c
fips_test.c
ge_low_mem.c
ge_operations.c
hash.c
hc128.c
hmac.c
idea.c
integer.c
logging.c
md2.c
md4.c
md5.c
memory.c
pkcs12.c
pkcs7.c
poly1305.c
pwdbased.c
rabbit.c
random.c
ripemd.c
rsa.c
selftest.c
sha.c
sha256.c
sha3.c
sha512.c
signature.c
sp_arm32.c
sp_arm64.c
sp_c32.c
sp_c64.c
sp_int.c
sp_x86_64.c
srp.c
tfm.c
wc_encrypt.c
wc_port.c
wolfcrypt_first.c
wolfcrypt_last.c
wolfevent.c
wolfmath.c
)